Small fixes for projects and home pages for the alignments

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -79,9 +79,10 @@ body {
     box-shadow: 0px 2px 4px -1px var(--mlayout), 0px 4px 5px 0px var(--mlayout), 0px 1px 10px 0px var(--mlayout);
   }
 
-  & .container, & .toolbar {
+  & .container,
+  & .toolbar {
     padding: 0;
-    height: 100%
+    height: 100%;
   }
 
   & .main-logo {
@@ -126,8 +127,7 @@ body {
   .text-div {
     display: flex;
     flex-direction: column;
-    -webkit-box-flex: 0;
-    padding: 0 5rem;
+    padding-left: 5rem;
     width: 100%;
 
     font-family: 'Poppins', sans-serif;
@@ -136,15 +136,11 @@ body {
 }
 
 .say-hi {
-  padding: 1rem 0;
-
   font-size: 1.5rem;
   font-weight: bold;
 }
 
 .my-name {
-  padding-bottom: 1rem;
-
   font-size: 3rem;
   font-weight: bolder;
   color: var(--special);
@@ -152,14 +148,13 @@ body {
 
 .passionate {
   display: inline-flex;
-  padding-bottom: 1rem;
 
   font-size: 1.5rem;
   font-weight: bold;
   color: var(--sub);
 
   .adjective {
-    padding-left: 0.5rem;
+    padding: 0 0.5rem;
     color: var(--special);
     white-space: nowrap;
 
@@ -207,8 +202,8 @@ body {
   }
 
   .journey {
-    padding-left: 0.5rem;
     color: var(--slayout);
+    text-wrap: nowrap;
 
     transition: transform 0.6s ease-in-out;
 
@@ -242,7 +237,7 @@ body {
   &:hover {
     background-color: var(--slayout3) !important;
     box-shadow: 0 14px 28px rgba(0, 0, 0, 0.2);
-    padding: 1em 2em !important; 
+    padding: 1em 2em !important;
   }
 }
 
@@ -286,7 +281,6 @@ body {
     var(--main) 100%
   );
 }
-
 
 .details {
   width: 100%;
@@ -499,6 +493,24 @@ body {
   gap: 3.5rem;
 }
 
+.project.navi {
+  letter-spacing: 0.04rem;
+  font-size: 1rem;
+  padding-right: 25px;
+
+  a {
+    font-weight: bold;
+    color: var(--slayout) !important;
+    &:hover {
+      &::after {
+        content: '→';
+        color: var(-slayout) !important;
+        padding-left: 5px;
+      }
+    }
+  }
+}
+
 .contact-types {
   display: flex;
   text-align: center;
@@ -653,5 +665,6 @@ body {
     opacity: 0;
     width: 100%;
     animation: textFade#{$i} 30s ease-in-out infinite;
+    white-space: nowrap;
   }
 }
